@@ -5,6 +5,7 @@
 * Added version numbers to usage
 * countlets can show progress with -p flag
 * Rewrote count_klets() internals, much faster now
+* shuffler can work on fasta-formatted input with -f flag
 
 2019-04-20  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>
 
